V.Next
----------
- [MAJOR] Rename LobalBroadcasterAliases to LocalBroadcasterAliases (#1584)
- [PATCH] Make it clear if adding a query param should overwrite or leave as is (#1581)
- [PATCH] Handle the scenario where broker activity is killed wrongly. (#1568)
- [MINOR] Add GetOsForMats to IDeviceMetadata (#1552)
- [MINOR] Enabling refresh_in feature (#1310)
- [PATCH] Msal removeAccount shouldn't invoke broker's removeAccount (#1336)
- [MAJOR] Move Utility classes (#1526)
- [MINOR] Telemetry for OneAUth (#1514, #1525)
- [MAJOR] Migrate CommandDispatcher to common4j (#1519)
- [MAJOR] Migrate BaseController to common4j (#1515)
- [MAJOR] Migrate *TokenCache classes to common4j
- [MAJOR] Migrate ISharedPreferencesFileManager to common4j (#1465)
- [MAJOR] Migrate Strategies and Parameters. (#1488)
- [MAJOR] Migrate AccountManager's Account (#1483)
- [MAJOR] Migrate Strategies part 1/2 (#1475)
- [MINOR] Move predefined key loader to common4j from common (#1477)
- [PATCH] Add method to check if two authorities belong to same cloud (#1471)
- [MINOR] Adds new cache encryption key migration API for OneAuth (#1464)
- [MAJOR] Migrate StorageHelper to common4j (#1450)
- [MAJOR] Migrate Exceptions from common to common4j (#1442)
- [PATCH] Fixing removeAccount method for msal cpp when the realm is empty (#1422)
- [MINOR] Migrate Requests/Responses (#1424)
- [MAJOR] Add SSL context support to UrlConnectionHttpClient(#1396)
- [MAJOR] Migrate AuthRequests to common4j (#1394)
- [MINOR] Migrate Device, ObjectMapper, ClockSkewManager and IHasExtraParameters to common4j (#1383)
- [MINOR] Migrate eSTS Telemetry to common4j (#1372)
- [PATCH] Fix/Suppress SpotBugs issue (#1367)
- [MINOR] Migrate HTTP Layer to common java lib. (#1347)
- [PATCH] Port eSTS telemetry layer to common-java (#1328)
- [MINOR] Added support for handling null taskAffinity.  InteractiveTokenCommmand now captures whether taskAFfinity is null and records taskId (#1282)